--- a/index.html
+++ b/index.html
@@ -282,7 +282,7 @@
                   name="Message"
                   placeholder="Your Message"
                 ></textarea>
-                <button class="btn btn2" onclick="msg()">Submit</button>
+                <button class="btn btn2">Submit</button>
               </form>
             </div>
           </div>
